2001-11-08  Glynn Foster  <glynn.foster@sun.com>

	* panelglobalconfig.schema: Update. Well actually
	fix :)

2001-11-08  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install schema using gconftool.

2001-11-08  Mark McLoughlin  <mark@skynet.ie>

	* basep-widget.c, button-widget.c, menu-fentry.c
	  menu-properties.c, menu-rh.c, menu-util.c, menu.c,
	  panel-widget.c, session.c, status.c: sensible debugging
	defines. undef them all so warnings don't get lost.

2001-11-07  Mark McLoughlin  <mark@skynet.ie>

	* launcher.c: (is_this_drop_ok): use GDK_POINTER_TO_ATOM
	instead of GPOINTER_TO_UINT.

	* menu-fentry.c: (get_applet_goad_id_from_ditem) make static.

	* panel.c: (get_target_list): impl.
	(is_this_drop_ok): kill GPOINTER_TO_UINT atom usage.

	* tasklist_icon.c: (tasklist_icon_check_mini): use GdkAtom.

	* xstuff.[ch]: (xstuff_nautilus_desktop_present),
	(xstuff_set_simple_hint), (status_event_filter),
	(get_typed_property_data), (send_client_message_1L),
	(xstuff_setup_global_desktop_area), (xstuff_setup_desktop_area),
	(xstuff_unsetup_desktop_area): bunch of GdkAtom/Atom related
	warnings fixage.

2001-11-7   Glynn Foster  <glynn.foster@sun.com>

	* basep-widget.c: Fix bug in set_property call.

2001-11-07  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am, basep-widget.c, floating-widget.c, panel-gconf.c,
	  panel-gconf.h, panel_config_global.h, session.c, session.h: 

	  More property stuff...mostly dumb stuff though. Added installation
	  of schema too.

2001-11-05  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am, basep-widget.c, border-widget.c,
	  floating-widget.c, foobar-widget.c, gnome-panel-properties.c,
	  main.c, main.h, menu.c, panel-gconf.c, panel-gconf.h, panel-widget.c,
	  panel-widget.h, panel_config_global.h, panelglobalconfig.schema,
	  session.c, tearoffitem.c: More work getting the global properties into
	  shape. Removed the option to have the movement type in the capplet - these