@@ -1,3 +1,15 @@
+2001-11-08  Mark McLoughlin  <mark@skynet.ie>
+
+	* basep-widget.c: (basep_pos_get_hide_size),
+	(basep_pos_get_hide_pos), (basep_widget_do_hiding),
+	(basep_widget_do_showing), (basep_widget_explicit_hide),
+	(basep_widget_explicit_show), (basep_widget_autoshow),
+	(basep_widget_queue_autoshow), (basep_widget_autohide),
+	(basep_widget_queue_autohide): update gconf key names.
+
+	* floating-widget.c: (floating_pos_get_hide_size),
+	(floating_pos_get_hide_pos): ditto.
+
 2001-11-08  Glynn Foster  <glynn.foster@sun.com>
 
 	* panelglobalconfig.schema: Update. Well actually
